--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   url_launcher: ^6.2.5
   flutter_phone_direct_caller: ^2.1.1
+  intl: ^0.19.0
+  # fl_chart: ^0.67.0
+  flutter_charts: ^0.5.2
+
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +80,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+  
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
